# timelength

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: pypi.yml  tests.yml
scripts/: verify.py
src/timelength/: __init__.py  dataclasses.py  enums.py  errors.py  locales.py  timelength.py
src/timelength/parsers/: common.py  parser_one.py
tests/: smoke_test.py  test_english.py  test_misc.py  test_spanish.py
timelength/: __init__.py  constants.py  dataclasses.py  enums.py  errors.py  exceptions.py  helper.py  locales.py  scales.py  timelength.py  utils.py
timelength/locales/: english.json  spanish.json
timelength/parsers/: common.py  parser_one.py
