[project]
name = "timelength"
version = "3.0.2"
description = "A flexible python duration parser designed for human readable lengths of time."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Etorix", email = "admin@etorix.dev" }]
keywords = ["timelength", "duration", "parser", "parsing", "time", "datetime", "timedelta"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = []

[project.urls]
Homepage = "https://pypi.org/project/timelength/"
Repository = "https://github.com/EtorixDev/timelength/"

[dependency-groups]
dev = [
    "ruff>=0.11.10,<0.12.0",
    "pytest>=8.3.5,<9.0.0",
    "pytest-cov>=6.1.1,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "tox>=4.26.0,<5.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
timelength = ["locales/*.json"]

[tool.ruff]
line-length = 120